--- a/service-account.yaml
+++ b/service-account.yaml
@@ -8,3 +8,10 @@ metadata:
   namespace: kube-system
   annotations:
     eks.amazonaws.com/role-arn: arn:aws:iam::882498426892:role/loadbalancer-controller-role
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 80
+    targetPort: 8080
+  selector:
+    app: emailfrontend-app
