--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,41 +1,21 @@
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: emailfrontend-app
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: emailfrontend-app
-  name: deployment
+  name: nodeapp-deployment
+  labels:
+    app: nodeapp
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: emailfrontend-app
-  replicas: 2
+      app: nodeapp
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: emailfrontend-app
+        app: nodeapp 
     spec:
       containers:
-      - image:  public.ecr.aws/g2q9h6g9/emailfrontend-app:latest
-        imagePullPolicy: Always
-        name: emailfrontend-app
+      - name: nodeserver
+        image: thetips4you/nodeapp:latest
         ports:
-        - containerPort: 80
----
-apiVersion: v1
-kind: Service
-metadata:
-  namespace: emailfrontend-app
-  name: service-app
-spec:
-  ports:
-    - port: 80
-      targetPort: 80
-      protocol: TCP
-  type: NodePort
-  selector:
-    app.kubernetes.io/name: emailfrontend-app
+        - containerPort: 3000
