--- a/service-account.yaml
+++ b/service-account.yaml
@@ -1,17 +1,38 @@
-apiVersion: v1
-kind: ServiceAccount
+# apiVersion: apps/v1
+kind: Deployment
 metadata:
+  name: nodeapp-deployment
   labels:
-    app.kubernetes.io/component: controller
-    app.kubernetes.io/name: aws-load-balancer-controller
-  name: aws-load-balancer-controller
-  namespace: kube-system
-  annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::882498426892:role/loadbalancer-controller-role
+    app: nodeapp
 spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nodeapp
+  template:
+    metadata:
+      labels:
+        app: nodeapp 
+    spec:
+      containers:
+      - name: nodeserver
+        image: Thiruhari9699/emailfrontend:latest
+        ports:
+        - containerPort: 3000
+        
+        
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: nodeapp-service
+spec:
+  selector:
+    app: nodeapp 
   type: LoadBalancer
   ports:
-  - port: 80
-    targetPort: 8080
-  selector:
-    app: emailfrontend-app
+  - protocol: TCP
+    port: 5000
+    targetPort: 3000
+    nodePort: 31110
